--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     text-align: center;
 }
 
+strong {
+    font-weight: 800;
+}
+
 header {
     display: flex;
     flex-direction: row;
@@ -77,6 +81,7 @@ main .container img {
     font-weight: bold;
     padding: 10px 50px;
     text-align: center;
+    border-radius: 5px;
 }
 
 main .container p {
@@ -100,14 +105,29 @@ main .container .carte .box1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 15px 0;
+    margin-top: 25px;
+    border-radius: 15px;
+    padding: 20px 50px;
+    gap: 15px;
+}
+
+main .container .red {
+    background-color:rgb(255, 183, 176);
+}
+
+main .container .beige {
     background-color: antiquewhite;
-    border-radius: 5px;
-    padding: 20px;
+}
+
+main .container .blue {
+    background-color: rgb(215, 245, 250);
 }
 
 main .container .carte .box1 .box2 {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 main .container .carte .box1 h3 {
@@ -120,12 +140,38 @@ main .container .carte .box1 .line {
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 0;
     height: 30px;
+    padding: 0 10px;
+}
+
+main .container .carte .box1 .type strong, main .container .carte .box1 .type p {
+    text-decoration: underline;
 }
 
 main .container .carte .box1 .line .price {
     display: flex;
     flex-direction: row;
     gap: 30px;
+}
+
+main .container .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+main .container .contact .tel{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 10px;
+    width: fit-content;
+}
+
+main .container .contact .tel ion-icon, main .container .contact .tel p{
+    font-size: 20px;
 }
