--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,11 @@
     text-align: center;
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
+
 strong {
     font-weight: 800;
 }
@@ -24,7 +29,7 @@ header {
     position: fixed;
     width: 100%;
     box-shadow: 0 0 2px 2px black;
-    z-index: 100;
+    z-index: 10;
 }
 
 header .navlinks {
@@ -141,19 +146,44 @@ main .container .carte .box1 .line {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
-    height: 30px;
     padding: 0 10px;
+    height: auto;
+}
+
+.carte .type {
+    border-bottom: 1px solid #555555;
+}
+
+.blue .box2 h4 {
+    padding: 10px;
+    border-bottom: 1px solid #555555;
 }
 
 main .container .carte .box1 .type strong, main .container .carte .box1 .type p {
     text-decoration: underline;
 }
 
-main .container .carte .box1 .line .price {
+main .container .carte .box1 .line .ingredients {
+    flex-basis: 60%;
+    flex-grow: 1;
+    padding-left: 10px;
+    text-align: left;
+}
+
+.price1, .price2 {
+    display: flex;
+    width: 100px;
+    justify-content: right;
+}
+
+main .container .carte .box1 .box2 .line .name {
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 0px;
+    align-items: center;
+    flex-basis: 20%;
+    flex-grow: 0;
+    text-align: left;
 }
 
 main .container .contact {
@@ -172,7 +202,7 @@ main .container .contact {
     height: 0;  /* Hauteur initiale à 0 pour le "padding-bottom hack" */
     overflow: hidden;  /* Cache le débordement */
     border-radius: 5px;  /* Arrondit les coins */
-    margin: 30px 0;  /* Marge extérieure */
+    margin: 30px 0;
 }
 
 .iframe-container iframe {
@@ -212,7 +242,7 @@ main .container .contact .tel ion-icon, main .container .contact .tel p{
     font-size: 20px;
     display: none;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 8;
     box-shadow: 0px 0px 5px 2px black;
 
     display: flex;
@@ -251,7 +281,7 @@ main .container .contact .tel ion-icon, main .container .contact .tel p{
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 900px) {
     main .container .carte .box1 .line {
         justify-content: space-around;
     }
@@ -297,4 +327,97 @@ main .container .contact .tel ion-icon, main .container .contact .tel p{
     main .container {
         padding-top: 75px;
     }
+
+    main .container .carte .box1 {
+        margin: 20px 0;
+        padding: 20px 15px;
+    }
+}
+
+/* Modal full screen */
+.pizza-details-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: center;
+    gap: 20px;
+    bottom: 0;
+}
+
+/* Modal full screen */
+.pizza-details-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9;
+    justify-content: flex-end; /* Assure que le modal soit en bas */
+    align-items: flex-end; /* Centre horizontalement mais colle le modal en bas */
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%; /* Prend toute la largeur en bas */
+    max-width: none; /* Enlève la limite de largeur pour couvrir tout l'écran en bas */
+    bottom: 0; /* Assure que le contenu soit collé au bas */
+    position: relative;
+}
+
+
+.ingre, #pizza-ingredients, .prices, #pizza-price {
+    text-align: left;
+}
+
+.modal-content .high {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-content h2, .modal-content p {
+    color: #333;
+}
+
+.close {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    padding: 8px;
+    border: solid 2px black;
+}
+
+.close span {
+    font-size: 30px;
+    cursor: pointer;
+    color: black;
 }
